--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,6 @@
-chardet==5.2.0
-click==8.1.7
-dnspython==2.4.2
-emoji==2.8.0
-filetype==1.2.0
-joblib==1.3.2
-langchain-experimental==0.0.10
-loguru==0.7.0
-lxml==4.9.3
-nltk==3.8.1
-pinecone-client==2.2.2
-python-magic==0.4.27
-tabulate==0.9.0
-unstructured==0.10.4
-langchain
-langchain-experimental
-openai
-pinecone-client
-tiktoken
-unstructured
-sqlalchemy
-fastapi
-pysqlite3-wheels
-google_api_python_client==2.96.0
-google_auth_oauthlib==1.0.0
-gspread==5.10.0
-llama_index==0.8.1.post1
-oauth2client==4.1.3
-
+git+https://github.com/Sayvai-io/custom-tools.git
+fastapi==0.103.1
+langchain==0.0.292
+pinecone_client==2.2.2
+pydantic==1.10.11
+SQLAlchemy==2.0.20
