--- a/environment.yml
+++ b/environment.yml
@@ -5,7 +5,7 @@ dependencies:
   - _libgcc_mutex=0.1=main
   - _openmp_mutex=5.1=1_gnu
   - bzip2=1.0.8=h7b6447c_0
-  - ca-certificates=2023.05.30=h06a4308_0
+  - ca-certificates=2023.08.22=h06a4308_0
   - ld_impl_linux-64=2.38=h1181459_1
   - libffi=3.4.4=h6a678d5_0
   - libgcc-ng=11.2.0=h1234567_1
@@ -13,129 +13,153 @@ dependencies:
   - libstdcxx-ng=11.2.0=h1234567_1
   - libuuid=1.41.5=h5eee18b_0
   - ncurses=6.4=h6a678d5_0
-  - openssl=3.0.10=h7f8727e_0
-  - pip=23.2.1=py311h06a4308_0
-  - python=3.11.4=h955ad1f_0
+  - openssl=3.0.12=h7f8727e_0
+  - pip=23.3.1=py310h06a4308_0
+  - python=3.10.13=h955ad1f_0
   - readline=8.2=h5eee18b_0
-  - setuptools=68.0.0=py311h06a4308_0
+  - setuptools=68.2.2=py310h06a4308_0
   - sqlite=3.41.2=h5eee18b_0
   - tk=8.6.12=h1ccaba5_0
-  - wheel=0.38.4=py311h06a4308_0
-  - xz=5.4.2=h5eee18b_0
+  - wheel=0.41.2=py310h06a4308_0
+  - xz=5.4.5=h5eee18b_0
   - zlib=1.2.13=h5eee18b_0
   - pip:
-      - aiohttp==3.8.5
+      - aiohttp==3.9.1
       - aiosignal==1.3.1
-      - annotated-types==0.5.0
+      - annotated-types==0.6.0
       - anyio==3.7.1
+      - asn1crypto==1.5.1
+      - asttokens==2.4.1
       - async-timeout==4.0.3
       - attrs==23.1.0
       - beautifulsoup4==4.12.2
-      - cachetools==5.3.1
-      - certifi==2023.7.22
+      - cachetools==5.3.2
+      - certifi==2023.11.17
+      - cffi==1.16.0
       - chardet==5.2.0
-      - charset-normalizer==3.2.0
+      - charset-normalizer==3.3.2
       - click==8.1.7
-      - dataclasses-json==0.5.14
+      - cloud-sql-python-connector==1.5.0
+      - cryptography==41.0.7
+      - dataclasses-json==0.6.3
+      - decorator==5.1.1
+      - distro==1.8.0
       - dnspython==2.4.2
-      - docopt==0.6.2
-      - email-validator==2.0.0.post2
+      - elevenlabs==0.2.24
+      - email-validator==2.1.0.post1
       - emoji==2.8.0
-      - fastapi==0.103.0
-      - filelock==3.12.2
+      - et-xmlfile==1.1.0
+      - exceptiongroup==1.2.0
+      - executing==2.0.1
+      - fastapi==0.105.0
       - filetype==1.2.0
-      - frozenlist==1.4.0
-      - fsspec==2023.6.0
-      - google-api-core==2.11.1
+      - frozenlist==1.4.1
+      - fsspec==2023.12.2
+      - google==3.0.0
+      - google-api-core==2.15.0
       - google-api-python-client==2.96.0
-      - google-auth==2.22.0
-      - google-auth-httplib2==0.1.0
+      - google-auth==2.25.2
+      - google-auth-httplib2==0.2.0
       - google-auth-oauthlib==1.0.0
-      - google-search-results==2.4.2
-      - googleapis-common-protos==1.60.0
-      - greenlet==2.0.2
-      - gspread==5.10.0
+      - google-cloud-speech==2.23.0
+      - googleapis-common-protos==1.62.0
+      - greenlet==3.0.2
+      - grpcio==1.60.0
+      - grpcio-status==1.60.0
+      - gspread==5.11.3
       - h11==0.14.0
-      - httpcore==0.17.3
+      - httpcore==1.0.2
       - httplib2==0.22.0
-      - httptools==0.6.0
-      - httpx==0.24.1
-      - huggingface-hub==0.16.4
-      - idna==3.4
-      - iniconfig==2.0.0
+      - httptools==0.6.1
+      - httpx==0.25.2
+      - idna==3.6
+      - ipython==8.18.1
       - itsdangerous==2.1.2
+      - jedi==0.19.1
       - jinja2==3.1.2
       - joblib==1.3.2
-      - kutty==0.0.1
-      - langchain==0.0.263
+      - jsonpatch==1.33
+      - jsonpointer==2.4
+      - langchain==0.0.350
+      - langchain-community==0.0.3
+      - langchain-core==0.1.1
       - langchain-experimental==0.0.10
-      - langsmith==0.0.22
+      - langsmith==0.0.70
       - llama-index==0.8.1.post1
       - loguru==0.7.0
       - lxml==4.9.3
-      - markdown-it-py==3.0.0
       - markupsafe==2.1.3
       - marshmallow==3.20.1
-      - mdurl==0.1.2
+      - matplotlib-inline==0.1.6
       - multidict==6.0.4
       - mypy-extensions==1.0.0
-      - nest-asyncio==1.5.7
+      - nest-asyncio==1.5.8
       - nltk==3.8.1
-      - numexpr==2.8.5
-      - numpy==1.25.2
+      - numpy==1.26.2
       - oauth2client==4.1.3
       - oauthlib==3.2.2
-      - openai==0.27.8
-      - openapi-schema-pydantic==1.2.4
-      - orjson==3.9.5
-      - packaging==23.1
-      - pandas==2.0.3
+      - openai==1.4.0
+      - openpyxl==3.1.2
+      - orjson==3.9.10
+      - packaging==23.2
+      - pandas==2.1.4
+      - parso==0.8.3
+      - pexpect==4.9.0
+      - pg8000==1.30.3
+      - pgvector==0.2.4
       - pinecone-client==2.2.2
-      - pipreqs==0.4.13
-      - pluggy==1.2.0
-      - protobuf==4.24.0
-      - pyasn1==0.5.0
+      - prompt-toolkit==3.0.43
+      - proto-plus==1.23.0
+      - protobuf==4.25.1
+      - ptyprocess==0.7.0
+      - pure-eval==0.2.2
+      - pyasn1==0.5.1
       - pyasn1-modules==0.3.0
-      - pydantic==1.10.9
-      - pydantic-core==2.6.3
-      - pydantic-extra-types==2.1.0
-      - pydantic-settings==2.0.3
-      - pygments==2.16.1
+      - pyaudio==0.2.14
+      - pycparser==2.21
+      - pydantic==2.5.2
+      - pydantic-core==2.14.5
+      - pydantic-extra-types==2.2.0
+      - pydantic-settings==2.1.0
+      - pydub==0.25.1
+      - pygments==2.17.2
       - pyparsing==3.1.1
       - pysqlite3==0.5.1
-      - pytest==7.4.0
+      - pysqlite3-wheels==0.5.0
       - python-dateutil==2.8.2
       - python-dotenv==1.0.0
       - python-magic==0.4.27
       - python-multipart==0.0.6
-      - pytz==2023.3
+      - pytz==2023.3.post1
       - pyyaml==6.0.1
-      - regex==2023.8.8
+      - regex==2023.10.3
       - requests==2.31.0
       - requests-oauthlib==1.3.1
-      - rich==13.5.2
       - rsa==4.9
+      - sayvai-tools==0.0.2
+      - scramp==1.4.4
       - six==1.16.0
       - sniffio==1.3.0
-      - soupsieve==2.4.1
-      - sqlalchemy==2.0.19
+      - soupsieve==2.5
+      - sqlalchemy==2.0.23
+      - stack-data==0.6.3
       - starlette==0.27.0
       - tabulate==0.9.0
       - tenacity==8.2.3
-      - tiktoken==0.4.0
+      - tiktoken==0.5.2
       - tqdm==4.66.1
-      - typing-extensions==4.7.1
+      - traitlets==5.14.0
+      - typing-extensions==4.9.0
       - typing-inspect==0.9.0
       - tzdata==2023.3
-      - ujson==5.8.0
+      - ujson==5.9.0
       - unstructured==0.10.4
       - uritemplate==4.1.1
-      - urllib3==1.26.16
-      - uvicorn==0.23.2
-      - uvloop==0.17.0
-      - watchfiles==0.20.0
-      - websockets==11.0.3
-      - wikipedia==1.4.0
-      - yarg==0.1.9
-      - yarl==1.9.2
-
+      - urllib3==1.26.18
+      - uvicorn==0.24.0.post1
+      - uvloop==0.19.0
+      - watchfiles==0.21.0
+      - wcwidth==0.2.12
+      - websockets==12.0
+      - yarl==1.9.4
+prefix: /home/arun/miniconda3/envs/ast
